# localred

./: .gitignore  pyproject.toml
examples/: login.py  rewrite_hot_note.py  search.py  visit_link.py
src/localred/: __init__.py  chrome_finder.py  client.py  models.py  utils.py
src/localred/js/: explore_extract.js  note_extract.js  stealth.js
